tests/parser/statement_write_err4.expected
Syntax Error: line 3:
Unexpected token (TOK_ID, 'something2'), likely missing a(n)  
  'TOK_COMMA' or
Possibly due to malformed or missing:
  Non-terminal: 'If Statement' or
  Non-terminal: 'While Statement' or
  Non-terminal: 'Write Statement' or
  Non-terminal: 'Read Statement' or
  Non-terminal: 'Case'
