tests/parser/statement_write_err4.mtp
begin
	(*write statement: *)
	write(something something2)

end
.